--- a/traenslenzor/supervisor/system.tmpl
+++ b/traenslenzor/supervisor/system.tmpl
@@ -1,6 +1,13 @@
-{{- if .System }}
-<|start_header_id|>system<|end_header_id|>{{ .System }}<|eot_id|>
+<|start_header_id|>system<|end_header_id|>
+
+Cutting Knowledge Date: December 2023
+
+{{ if .System }}{{ .System }}
 {{- end }}
+{{- if .Tools }}When you receive a tool call response, use the output to progress in your agenda.
+
+You are a helpful assistant with tool calling capabilities.
+{{- end }}<|eot_id|>
 {{- range $i, $_ := .Messages }}
 {{- $last := eq (len (slice $.Messages $i)) 1 }}
 {{- if eq .Role "user" }}<|start_header_id|>user<|end_header_id|>
@@ -8,12 +15,12 @@
 
 Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.
 
-Respond in the format {"name": function name, "parameters": dictionary of argument name and its value. "reason": reason why you choose this tool next}. Do not use variables.
+Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}. Do not use variables.
 
 {{ range $.Tools }}
 {{- . }}
 {{ end }}
-Question: {{ .Content }}<|eot_id|>
+{{ .Content }}<|eot_id|>
 {{- else }}
 
 {{ .Content }}<|eot_id|>
